# gsp_n

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: images-2d.py  pixels-3d.py  testbed.py  transform-usage.py
examples/gsp/: buffer_example.py
examples/gsp_examples/: transform_example.py
examples/gsp_n/: images-2d.py  pixels-3d.py  testbed.py  transform-usage.py
gsp_n/: README.md  gsp_api.pyi  images-2d.py  pixels-3d.py  sample.py
src/gsp/core/: __init__.py  buffer.py  buffer_type.py
src/gsp/transforms/: __init__py  transform.py
src/gsp_n/: README.md  __init__.py  gsp_api.pyi
tests/: test_buffer.py
tmp/protobuf/: GSP.proto  NOTES.md
tmp/pydantic/: gsp_messages.py  sample.py
